# oauth2/authz_admin_service/handlers/__init__.py
@@ -1,4 +1,4 @@
-from ._accounts import AccountRole, Account, Accounts
+from ._accounts import Account, Accounts
 from ._profiles import Profiles, Profile
 from ._roles import Role, Roles
 from ._root import Root
