# oauth2/authz_admin_service/openapi-development.json
@@ -198,37 +198,9 @@
       ]
     },
     "Account": {
-      "allOf": [
-        {
-          "$ref": "#/definitions/Collection"
-        },
-        {
-          "type": "object",
-          "properties": {
-            "_embedded": {
-              "type": "object",
-              "properties": {
-                "item": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/definitions/AccountRole"
-                  }
-                }
-              }
-            },
-            "_etag": {
-              "type": "string",
-              "pattern": "^(?:W/)?\"[^\"]+\"$"
-            }
-          }
-        }
-      ]
-    },
-    "AccountRole": {
       "type": "object",
       "required": [
-        "_links",
-        "grounds"
+        "_links"
       ],
       "properties": {
         "_links": {
@@ -242,15 +214,23 @@
               "$ref": "#/definitions/Link"
             },
             "role": {
-              "$ref": "#/definitions/Link"
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/Link"
+              }
             }
           }
         },
         "_embedded": {
-          "type": "object"
-        },
-        "grounds": {
-          "type": "string"
+          "type": "object",
+          "properties": {
+            "role": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/Role"
+              }
+            }
+          }
         },
         "_etag": {
           "type": "string",
@@ -737,48 +717,6 @@
           },
           "428": {
             "description": "**Precondition Required**\nThe client didn't provide an `If-None-Match` or `If-Match` request header."
-          }
-        }
-      }
-    },
-    "/accounts/{account}/{accountrole}": {
-      "parameters": [
-        {
-          "name": "account",
-          "in": "path",
-          "required": true,
-          "type": "string",
-          "minLength": 1,
-          "maxLength": 255,
-          "description": "The unique ID of this account in ADW.\nUnfortunately, TMA returns the email address as unique identifier, instead of ADW's true internal unique ID, which consists of the user's last name plus three digits."
-        },
-        {
-          "name": "accountrole",
-          "in": "path",
-          "required": true,
-          "type": "string",
-          "pattern": "^\\\\w{1,32}$"
-        }
-      ],
-      "get": {
-        "summary": "A role assigned to a certain `{account}`",
-        "parameters": [
-          {
-            "$ref": "#/parameters/embed"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "headers": {
-              "ETag": {
-                "type": "string",
-                "pattern": "^(?:W/)?\"[^\"]+\"$"
-              }
-            },
-            "schema": {
-              "$ref": "#/definitions/AccountRole"
-            }
           }
         }
       }
